# PCMCalculator

./: LICENSE  PCMCalculator.py  PCM_GUI.py  README.md  paper.bib  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml
Test/: README.md
Test/Input/: PCMTest_mag.json  PCMTest_mod.json  PCMTest_ph.json
Test/Ouput/: PCMTest_ph_Flow_data.csv
paper/: paper.bib  paper.md
